# CGRA251_Boids

./: README.md  f5.sh  runcmake.bat
work/: CMakeLists.txt
work/res/models/: imgui.ini
work/res/shaders/: simple.fs.glsl
work/src/: CMakeLists.txt  ex.cpp  ex.h  main.cpp
work/src/cgra/: Boid.cpp  Boid.h  CMakeLists.txt_  Lattice.cpp  Lattice.h  Predator.cpp  Predator.h  imgui_impl_glfw_gl3.cpp  matrix.hpp  mesh.cpp  mesh.hpp  shader.hpp
